# ai-agents

./: .gitignore  jira.txt
city-assistant/: .env.example  README.md  pyproject.toml
city-assistant/city_assistant/: agent.py  prompt.py
city-assistant/city_assistant/tools/: tools.py
city-assistant/deployment/: deploy.py
city-assistant/docs/: agent-engine-setup.md
gitops/: .dockerignore  .env.example  README.md  SCENARIOS.md  pyproject.toml
gitops/deployment/: deploy.py  test_deployment.py
gitops/docs/: AGENT_INTEGRATION.md  agent-engine-setup.md
gitops/examples/argocd-applications/: app-of-apps.yaml
gitops/examples/argocd-applications/data-pipeline-team/: app.yaml
gitops/examples/helm-overrides/data-pipeline-team/dev/: values.yaml
gitops/examples/teams/ai-ml-team/: .gitkeep
gitops/examples/teams/data-pipeline-team/dev/us-west/cluster1/: values.yaml
gitops/frontend/: README.md
gitops/gitops/: agent.py  prompt.py
gitops/gitops/Chart/: values.yaml
gitops/gitops/Chart/app/: Chart.yaml  values.yaml
gitops/gitops/Chart/app/templates/: deployment.yaml
gitops/gitops/Chart/templates/: deployment.yaml
gitops/gitops/deploy/hello-app/: values.yaml
gitops/gitops/deploy/hello-app/templates/: deployment.yaml  service.yaml
gitops/gitops/tools/: tools.py
gitops/trash/: temp.txt
gitops/ui/: Dockerfile  README.md  main.py
